--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.10.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.4",
     "firebase": "^11.6.0",
     "framer-motion": "^12.6.5",
