--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@emotion/styled": "^11.14.0",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.4",
+    "chakra-react-select": "^5.0.5",
     "firebase": "^11.6.0",
     "framer-motion": "^12.6.5",
+    "primereact": "^10.9.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0"
